// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProposalCardActions renders properly and shows no icons if you have neither created the proposal nor voted 1`] = `
.c0 {
  width: 5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<div>
   
  <div
    class="c0"
  />
   
</div>
`;

exports[`ProposalCardActions renders properly and shows two icons if you have created the proposal and voted 1`] = `
.c0 {
  width: 5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<div>
   
  <div
    class="c0"
  >
    <svg
      fill="currentColor"
      height="30"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 512 512"
      width="30"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M170.718 216.482L141.6 245.6l93.6 93.6 208-208-29.118-29.118L235.2 279.918l-64.482-63.436zM422.4 256c0 91.518-74.883 166.4-166.4 166.4S89.6 347.518 89.6 256 164.482 89.6 256 89.6c15.6 0 31.2 2.082 45.764 6.241L334 63.6C310.082 53.2 284.082 48 256 48 141.6 48 48 141.6 48 256s93.6 208 208 208 208-93.6 208-208h-41.6z"
      />
    </svg>
  </div>
   
</div>
`;
